fix: 修改作者榜样式细节，字体颜色、添加等级、text-overflow等

--- a/src/styles/globals.less
+++ b/src/styles/globals.less
@@ -4,7 +4,7 @@
 
 html,
 body {
-  width: 100%; 
+  width: 100%;
   height: auto;
   min-height: 100vh;
   margin: 0;
@@ -41,7 +41,7 @@ a {
     color: rgb(var(--arcoblue-5));
   }
 }
-    
+
 
 // home sidebar
 .sidebar-block {
@@ -52,4 +52,6 @@ a {
   font-size: 1.16rem;
   line-height: 1.29;
   color: var(--color-neutral-8);
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
